--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^6.13.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/otplib": "^10.0.0",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
